--- a/MyNewSpring/src/main/resources/templates/login.html
+++ b/MyNewSpring/src/main/resources/templates/login.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-	<form th:action="@{/web/registration}" method="get">
+	<form th:action="@{/registration}" method="get">
 		<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
 	</form>	
 	
 	<div class="container">
 		<img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
-		<form th:action="@{/web/login}" method="POST" class="form-signin">
+		<form th:action="@{/login}" method="POST" class="form-signin">
 			<h3 class="form-signin-heading" th:text="Welcome"></h3>
 			<br/>
 			 
