--- a/MyNewSpring/src/main/resources/templates/tripeditor.html
+++ b/MyNewSpring/src/main/resources/templates/tripeditor.html
@@ -105,7 +105,7 @@
 			<div class="col-sm-4">
 				<h2>Select sight</h2>
 				<br>
-				<h4>In <span th:text="${session.requestedTrip.city.cityName}"></span> of the trip on <span th:text="${session.requestedTrip.tripDate}"></span></h4>
+				<h4>In <span th:text="${session.requestedTrip.city.cityName}"></span> of the trip on <span th:text="${#dates.format(session.requestedTrip.tripDate, 'dd-MM-yyyy')}"></span></h4>
 				<br>
 				<form th:action="@{/selectsight}" th:object="${fooOption}"
 					class="form-inline" method="post" enctype="multipart/form-data">
@@ -148,7 +148,7 @@
     </ul>
   </div> -->
 					<br>
-					<button class="btn btn-default btn-lg" type="submit">select
+					<button class="btn btn-default btn-lg"  name="action" value="slct" type="submit">select
 						sight</button>
 					<button type="submit" name="action" value="dltsight"
 						class="btn btn-default btn-lg">delete sight from trip</button>
@@ -162,7 +162,7 @@
 				<div class="col-sm-4">
 					<h2>Add sight</h2>
 					<br>
-					<h4>To the trip to <span th:text="${session.requestedTrip.city.cityName}"></span> on the <span th:text="${session.requestedTrip.tripDate}"></span></h4>
+					<h4>To the trip to <span th:text="${session.requestedTrip.city.cityName}"></span> on the <span th:text="${#dates.format(session.requestedTrip.tripDate, 'dd-MM-yyyy')}"></span></h4>
 					<br>
 					<p>
 						<label for="nameofsight">sight</label> <input class="form-control"
@@ -448,440 +448,156 @@
 
 			/*]]>*/
 		</script>
-	<!--
-           <br>
-        <table id="maintable" width="50%" cellpadding="0" cellspacing="0" class="pdzn_tbl1" border="#729111 1px solid">
-            <tr>
-                <th align="center">Roll No</th>
-                <th align="center">First Name</th>
-                <th align="center">Last Name</th>
-            </tr>
-            <tr id="rows">
-                <div style="padding-left: 5px">
-                    <td style="padding:5px;">
-                        <input type="text" name="rollno<? $i ?>" />
-                    </td>
-                    <td style="padding:5px;">
-                        <input type="text" name="firstname<? $i ?>" />
-                    </td>
-                    <td style="padding:5px;">
-                        <input type="text" name="lastname<? $i ?>" />
-                    </td>
-                </div>
-            </tr>
-        </table>
-            <br><div id="add_new">ADD NEW
-</div>
-                  $("#add_new").click(function () {      
-                    var bla = $('#sightpic').val();
-                    function sendData() {
-    $.ajax({
-        url: '/addpic',
-        type: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify({
-            addr:${bla},
-            trs:${sessionScope.requestedSight}
-        }),
-        dataType: 'json'
-    });
-}
-                    var statefulvar = ${sessionScope.stateful};
-                    statefulvar.addItem(bla,${sessionScope.requestedSight})
-                    
-                    $("#add_new").click(function () { 
 
-    $("#maintable").each(function () {
-       
-        var tds = '<tr>';
-        jQuery.each($('tr:last td', this), function () {
-            tds += '<td>' + $(this).html() + '</td>';
-        });
-        tds += '</tr>';
-        if ($('tbody', this).length > 0) {
-            $('tbody', this).append(tds);
-        } else {
-            $(this).append(tds);
-        }
-    });
-});
-                    
-       $("#add_new").click(function () { 
-
-    $("#pics").each(function () {
-       
-        var tds = '<tr>';
-        jQuery.each($('tr:last td', this), function () {
-            tds += '<td>' + $(this).html() + '</td>';
-        });
-        tds += '</tr>';
-        if ($('tbody', this).length > 0) {
-            $('tbody', this).append(tds);
-        } else {
-            $(this).append(tds);
-        }
-    });
-});
-							<%
-									String action = request.getParameter("todo");
-										Stac td = (Stac) session.getAttribute("td");
-										if (td == null) {
-											try {
-												td = new Stac();
-												session.setAttribute("td", td);
-											} catch (Exception ex) {
-												ex.printStackTrace();
-											}
-										}
-										
-										StacInv tdi = (StacInv) session.getAttribute("tdi");
-										if (tdi == null) {
-											try {
-												tdi = new StacInv();
-												session.setAttribute("tdi", tdi);
-											} catch (Exception ex) {
-												ex.printStackTrace();
-											}
-											}
-										if (action != null) {
-											if (action.equals("AddItem")) {
-												String item = request.getParameter("item");
-												if (!item.equals("")) {
-													td.addItem(item, (TripSightseeing) session.getAttribute("worksight"));
-													/* 	out.println("item " + item + " added"); */
-													request.setAttribute("scrollTo", "addpics");
-
-												}
-											} else if (action.equals("ListItems")) {
-												Vector<Map> items = td.listItems();
-												/* 		out.println("items: "); */
-												out.println(
-														"<Table id='pics'><thead><tr><th>n.</TH><TH>Trip Sight</TH><TH>Pic addr ends with</TH><th>remove?</th></tr></thead>");
-												for (int x = 0; x != items.size(); x++) {
-													String addrspic = (String) items.elementAt(x).get("addr");
-													out.println(
-															"<tr><td>" + (x + 1) + ".</td><td> " + items.elementAt(x).get("trs") + "</td><td> "
-																	+ (addrspic.length() >= 40
-																			? /* "..." + */ addrspic.substring(addrspic.length() - 40)
-																			: addrspic));
-													out.print("</td><td><a href=tripEditor.jsp?todo=remove&itemnum=" + x
-															+ ">remove</a></td></tr>");
-													request.setAttribute("scrollTo", "addpics");
-												}
-												out.print("</table>");
-												request.setAttribute("scrollTo", "addpics");
-
-											} else if ("ClearList".equals(action)) {
-												td.clearItems();
-												out.println("items Cleared");
-												request.setAttribute("scrollTo", "addpics");
-
-											} else if ("todb".equals(action)) {
-												RequestDispatcher rd = request.getRequestDispatcher("/EditorController");
-												//request.setAttribute("td", td);
-												request.setAttribute("action", action);
-												request.setAttribute("td1", td); /*    request.setAttribute("trp", (String)(session.getAttribute("tri")+""));
-																					*/ //session.removeAttribute("todo");
-												rd.forward(request, response);
-											} else if ("remove".equals(action)) {
-												String item = request.getParameter("itemnum");
-												td.removeItem(item);
-												request.setAttribute("scrollTo", "addpics");
-
-											} else if ("listpicsforsite".equals(action)) {
-												
-												
-												Vector<Map> items = tdi.listItems(
-														((TripSightseeing) (session.getAttribute("worksight"))).getIdtripSightseeing());
-												out.println(
-														"<Table id='pics'><thead><tr><th>n.</TH><TH>Trip Sight</TH><TH>Pic addr ends with</TH><th>remove?</th></tr></thead>");
-												for (int x = 0; x != items.size(); x++) {
-													String addrspic = (String) items.elementAt(x).get("addr");
-													out.println(
-															"<tr><td>" + (x + 1) + ".</td><td> " + items.elementAt(x).get("trs") + "</td><td> "
-																	+ (addrspic.length() >= 40
-																			? /* "..." + */ addrspic.substring(addrspic.length() - 40)
-																			: addrspic));
-													out.print("</td><td><a href=tripEditor.jsp?todo=removeI&itemnum=" + x
-															+ ">remove</a></td></tr>");
-													request.setAttribute("scrollTo", "addpics");
-												}
-												out.print("</table>");
-												request.setAttribute("scrollTo", "addpics");
-											}
-											
-											else if ("removeI".equals(action)) {
-												String item = request.getParameter("itemnum");
-												tdi.removeItem(item);
-												request.setAttribute("scrollTo", "addpics");
-										}
-										}
-								%>
-  -->
 
 	<!-- Container (Services Section) -->
-	<div id="services" class="container-fluid text-center">
-		<h2>SERVICES</h2>
-		<h4>What we offer</h4>
-		<br>
-		<div class="row slideanim">
-			<div class="col-sm-4 ">
-				<div class="thumbnail">
-					<img src="paris.jpg" alt="Paris" width="400" height="300">
-					<p>
-						<strong>Paris</strong>
-					</p>
-					<p>Yes, we built Paris</p>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<span class="glyphicon glyphicon-heart logo-small"></span>
-				<h4>LOVE</h4>
-				<p>Lorem ipsum dolor sit amet..</p>
-			</div>
-			<div class="col-sm-4">
-				<span class="glyphicon glyphicon-lock logo-small"></span>
-				<h4>JOB DONE</h4>
-				<p>Lorem ipsum dolor sit amet..</p>
-			</div>
-		</div>
-		<br> <br>
-		<div class="row slideanim">
-			<div class="col-sm-4">
-				<span class="glyphicon glyphicon-leaf logo-small"></span>
-				<h4>GREEN</h4>
-				<p>Lorem ipsum dolor sit amet..</p>
-			</div>
-			<div class="col-sm-4">
-				<span class="glyphicon glyphicon-certificate logo-small"></span>
-				<h4>CERTIFIED</h4>
-				<p>Lorem ipsum dolor sit amet..</p>
-			</div>
-			<div class="col-sm-4">
-				<span class="glyphicon glyphicon-wrench logo-small"></span>
-				<h4 style="color: #303030;">HARD WORK</h4>
-				<p>Lorem ipsum dolor sit amet..</p>
-			</div>
-		</div>
-	</div>
+	
+		<form th:action="@{/delcity}" 
+		class="form-inline" method="post" enctype="multipart/form-data" th:object="${City1}">
+		<div id="services" class="container-fluid text-center">
+			<h2>SERVICES</h2>
+			<h4>Delete City</h4>
+			<br>
 
-	<!-- Container (Portfolio Section) -->
-	<div id="portfolio" class="container-fluid text-center bg-grey">
-		<h2>Portfolio</h2>
-		<br>
-		<h4>What we have created</h4>
-		<div class="row text-center slideanim">
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="paris.jpg" alt="Paris" width="400" height="300">
-					<p>
-						<strong>Paris</strong>
-					</p>
-					<p>Yes, we built Paris</p>
+			<div class="row slideanim">
+<!-- 			<div class="col-sm-4">
+					<span class="glyphicon glyphicon-tower logo-small"></span>
+					<h4>Delete</h4>
+					<label for="Name2">hotel</label> <input type="text"
+						class="form-control" id="hotel" placeholder="hotel name" />
+
+				</div> -->
+
+				<div class="col-sm-4">
+
+
+					<span class="glyphicon glyphicon-tower logo-small"></span>
+					<h4>This</h4>
+
+					<label for="Inputselect">city</label>
+					<div class="input-group">
+						<div class="form-group blu-margin">
+							<select class="form-control" th:name="city"  th:value="city" th:field="*{cityName}" >
+								<option th:each="user : ${cities}" th:value="${user.idcities}" 
+									th:text="${user.cityName}"></option>
+							</select>
+						</div>
+
+
+					</div>
+				</div>
+	
+				<div class="col-sm-8">
+					<span class="glyphicon glyphicon-tower logo-small"></span>
+				<h4>change travler</h4>
+						<label for="Name2">traveler</label> <input type="text"
+						class="form-control" id="budget" placeholder="enter money spent" />
+
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="newyork.jpg" alt="New York" width="400" height="300">
-					<p>
-						<strong>New York</strong>
-					</p>
-					<p>We built New York</p>
+		<div class="container-fluid text-center">
+			<button type="submit" class="btn btn-lg btn-success">Submit
+				Information</button>
+		</div>
+
+		</div>
+
+
+	</form>
+
+
+
+<div>
+
+
+
+
+	<form th:action="@{/updatetrip}" th:object="${requestedTrip}"
+		class="form-inline" method="Post" enctype="multipart/form-data">
+
+		<div id="services1" class="container-fluid text-center ">
+			<h2>SERVICES</h2>
+			<h4>add a trip</h4>
+			<br>
+
+			<div class="row slideanim">
+
+
+				<div class="col-sm-4">
+
+
+					<span class="glyphicon glyphicon-tower logo-small"></span>
+					<h4>City</h4>
+
+					<label for="Inputselect">city</label>
+					<div class="input-group">
+						<div class="form-group blu-margin">
+							<select class="form-control"  th:field="*{city}">
+								<option th:each="user : ${cities}" th:value="${user.idcities}"
+									th:text="${user.cityName}" th:selected="${requestedTrip.city.idcities == user.idcities}"></option>
+							</select>
+						</div>
+
+
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-glass logo-small"></span>
+					<h4>hotel</h4>
+					<label for="Name2">hotel</label> <input type="text"
+						class="form-control" id="hotel" placeholder="hotel name" th:value="${requestedTrip.tripHotel}" th:field="*{tripHotel}"/>
+
+				</div>
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-euro logo-small"></span>
+					<h4>budget</h4>
+					<label for="Name2">budget</label> <input type="text"
+						class="form-control" id="budget"  th:value="${requestedTrip.tripMoneyspent}" placeholder="enter money spent" th:field="*{tripMoneyspent}"/>
+
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-					<p>
-						<strong>San Francisco</strong>
-					</p>
-					<p>Yes, San Fran is ours</p>
+			<br /> <br />
+			<div class="row slideanim">
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-time logo-small"></span>
+					<h4>date</h4>
+					<label for="Name2">date</label> <input type="date"   
+						class="form-control" id="date" th:value="${requestedTrip.tripDate}" th:placeholder="yyyy-mm-dd" th:field="*{{tripDate}}"/>
+
 				</div>
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-calendar logo-small"></span>
+					<h4>duration</h4>
+					<label for="Name2">number of days</label> <input type="text"
+						class="form-control" id="duration" th:value="${requestedTrip.tripNumdays}" placeholder="number of days" th:field="*{tripNumdays}"/>
+
+				</div>
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-road logo-small"></span>
+					<h4>transit time</h4>
+					<label for="Name2">transit time</label> <input type="text"
+						class="form-control" id="transit" th:value="${requestedTrip.tripNummintransit}" placeholder="enter transit time" th:field="*{tripNummintransit}"/>
+				</div>
+
 			</div>
 		</div>
-		<br>
 
-		<h2>What our customers say</h2>
-		<div id="myCarousel" class="carousel slide text-center"
-			data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner" role="listbox">
-				<div class="item active">
-					<h4>
-						"This company is the best. I am so happy with the result!"<br>
-						<span>Michael Roe, Vice President, Comment Box</span>
-					</h4>
-				</div>
-				<div class="item">
-					<h4>
-						"One word... WOW!!"<br> <span>John Doe, Salesman, Rep
-							Inc</span>
-					</h4>
-				</div>
-				<div class="item">
-					<h4>
-						"Could I... BE any more happy with this company?"<br> <span>Chandler
-							Bing, Actor, FriendsAlot</span>
-					</h4>
-				</div>
-			</div>
-
-			<!-- Left and right controls -->
-			<a class="left carousel-control" href="#myCarousel" role="button"
-				data-slide="prev"> <span
-				class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a> <a class="right carousel-control" href="#myCarousel" role="button"
-				data-slide="next"> <span
-				class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
+		<div class="container-fluid text-center">
+			<button type="submit" class="btn btn-lg btn-success">Submit
+				Information</button>
 		</div>
-	</div>
+	</form>
 
-	<!-- Container (Pricing Section) -->
-	<div id="pricing" class="container-fluid">
-		<div class="text-center">
-			<h2>Pricing</h2>
-			<h4>Choose a payment plan that works for you</h4>
-		</div>
-		<div class="row slideanim">
-			<div class="col-sm-4 col-xs-12">
-				<div class="panel panel-default text-center">
-					<div class="panel-heading">
-						<h1>Basic</h1>
-					</div>
-					<div class="panel-body">
-						<p>
-							<strong>20</strong> Lorem
-						</p>
-						<p>
-							<strong>15</strong> Ipsum
-						</p>
-						<p>
-							<strong>5</strong> Dolor
-						</p>
-						<p>
-							<strong>2</strong> Sit
-						</p>
-						<p>
-							<strong>Endless</strong> Amet
-						</p>
-					</div>
-					<div class="panel-footer">
-						<h3>$19</h3>
-						<h4>per month</h4>
-						<button class="btn btn-lg">Sign Up</button>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4 col-xs-12">
-				<div class="panel panel-default text-center">
-					<div class="panel-heading">
-						<h1>Pro</h1>
-					</div>
-					<div class="panel-body">
-						<p>
-							<strong>50</strong> Lorem
-						</p>
-						<p>
-							<strong>25</strong> Ipsum
-						</p>
-						<p>
-							<strong>10</strong> Dolor
-						</p>
-						<p>
-							<strong>5</strong> Sit
-						</p>
-						<p>
-							<strong>Endless</strong> Amet
-						</p>
-					</div>
-					<div class="panel-footer">
-						<h3>$29</h3>
-						<h4>per month</h4>
-						<button class="btn btn-lg">Sign Up</button>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4 col-xs-12">
-				<div class="panel panel-default text-center">
-					<div class="panel-heading">
-						<h1>Premium</h1>
-					</div>
-					<div class="panel-body">
-						<p>
-							<strong>100</strong> Lorem
-						</p>
-						<p>
-							<strong>50</strong> Ipsum
-						</p>
-						<p>
-							<strong>25</strong> Dolor
-						</p>
-						<p>
-							<strong>10</strong> Sit
-						</p>
-						<p>
-							<strong>Endless</strong> Amet
-						</p>
-					</div>
-					<div class="panel-footer">
-						<h3>$49</h3>
-						<h4>per month</h4>
-						<button class="btn btn-lg">Sign Up</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<!-- Container (Contact Section) -->
-	<div id="contact" class="container-fluid bg-grey">
-		<h2 class="text-center">CONTACT</h2>
-		<div class="row">
-			<div class="col-sm-5">
-				<p>Contact us and we'll get back to you within 24 hours.</p>
-				<p>
-					<span class="glyphicon glyphicon-map-marker"></span> Chicago, US
-				</p>
-				<p>
-					<span class="glyphicon glyphicon-phone"></span> +00 1515151515
-				</p>
-				<p>
-					<span class="glyphicon glyphicon-envelope"></span>
-					myemail@something.com
-				</p>
-			</div>
-			<div class="col-sm-7 slideanim">
-				<div class="row">
-					<div class="col-sm-6 form-group">
-						<input class="form-control" id="name" name="name"
-							placeholder="Name" type="text" required>
-					</div>
-					<div class="col-sm-6 form-group">
-						<input class="form-control" id="email" name="email"
-							placeholder="Email" type="email" required>
-					</div>
-				</div>
-				<textarea class="form-control" id="comments" name="comments"
-					placeholder="Comment" rows="5"></textarea>
-				<br>
-				<div class="row">
-					<div class="col-sm-12 form-group">
-						<button class="btn btn-default pull-right" type="submit">Send</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
+
+
+
+
+</div>
+
+
+
 
 	<!-- Add Google Maps -->
 	<div id="googleMap" style="height: 400px; width: 100%;"></div>
