--- a/MyNewSpring/src/main/resources/templates/fileone.html
+++ b/MyNewSpring/src/main/resources/templates/fileone.html
@@ -200,7 +200,7 @@
 		</div>
 	</form>
 
-
+<div th:if="${!frontp.empty and !frtr.empty and !utrips.empty}">
 	<div id="portfolio" class="container-fluid text-center bg-grey"
 		th:if="${#lists.size(frontp)>=3}">
 		<h2>Portfolio</h2>
@@ -408,6 +408,10 @@
 				
 			</div>
 		</div>
+	</div>
+	
+	
+	
 	</div>
 	<div id="contact" class="container-fluid bg-grey">
 		<h2 class="text-center">CONTACT</h2>
