--- a/MyNewSpring/src/main/resources/templates/fileone.html
+++ b/MyNewSpring/src/main/resources/templates/fileone.html
@@ -200,7 +200,7 @@
 		</div>
 	</form>
 
-<div th:if="${not #lists.isEmpty(frontp) and not #lists.isEmpty(frtr) and not #lists.isEmpty(utrips)}">
+<!-- <div th:if="${not #lists.isEmpty(frontp) and not #lists.isEmpty(frtr) and not #lists.isEmpty(utrips)}"> -->
 	<div id="portfolio" class="container-fluid text-center bg-grey"
 		th:if="${#lists.size(frontp)>=3}">
 		<h2>Portfolio</h2>
@@ -412,7 +412,7 @@
 	
 	
 	
-	</div>
+<!-- 	</div> -->
 	<div id="contact" class="container-fluid bg-grey">
 		<h2 class="text-center">CONTACT</h2>
 		<div class="row slideanim">
