--- a/MyNewSpring/src/main/resources/templates/cityxplorer2.html
+++ b/MyNewSpring/src/main/resources/templates/cityxplorer2.html
@@ -153,6 +153,7 @@
 		<div class="row slideanim">
 			<div class="col-sm-4">
 				<span class="glyphicon glyphicon-globe logo"></span>
+						<h1><a th:href="@{'/web/tripcity/chng'}">Change Desktop / Mobile Responsive View</a></h1>
 			</div>
 			<div class="col-sm-8">
 				<h2>City</h2>
